# rs-aku

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  macros.rs
core/src/extensions/: iterable.rs
modules/axum/: Cargo.toml
modules/cron/: Cargo.toml
modules/cron/src/: consts.rs  lib.rs
modules/cron/src/extensions/: job.rs
modules/poise/: Cargo.toml
modules/poise/src/: events.rs  lib.rs  snowflake.rs
modules/postgres/: Cargo.toml
modules/postgres/src/: lib.rs  query.rs  schema.rs
modules/serenity/: Cargo.toml
modules/serenity/src/: lib.rs  snowflake.rs
src/: lib.rs  main.rs
