# Copyright 2025 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[workspace]
resolver = "2"
members = ["core", "modules/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[package]
name = "aku"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
axum = ["dep:aku_axum"]
cron = ["dep:aku_cron"]
poise = ["dep:aku_poise"]
postgres = ["dep:aku_postgres", "aku_poise/postgres"]
runtime = []

[dependencies]
aku_core = { workspace = true }
aku_axum = { workspace = true, optional = true }
aku_cron = { workspace = true, optional = true }
aku_poise = { workspace = true, optional = true }
aku_postgres = { workspace = true, optional = true }
futures.workspace = true

[workspace.dependencies]
aku_core.path = "core"
aku_axum.path = "modules/axum"
aku_cron.path = "modules/cron"
aku_poise.path = "modules/poise"
aku_postgres.path = "modules/postgres"

paste = "^1.0"
extend = "^1.2"
sqlx = { version = "^0.8", features = ["runtime-tokio", "postgres"] }
sea-query = "^0.32"
sea-query-binder = { version = "^0.7", features = ["sqlx-postgres"] }
tokio = "^1.48"
tokio-cron-scheduler = "^0.15"
futures = "^0.3"
poise = "0.6.1"
log = "^0.4"

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", rev = "fe2f25097166e1e7fb56f341cbad9a2bc771a931" }

[patch.'https://github.com/serenity-rs/serenity']
serenity = { git = "https://github.com/atakku/rs-serenity", rev = "3009d22082cadab93e0f463e9d9868b656cd62bc" }