# Copyright 2025 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[workspace]
resolver = "2"
members = ["core", "modules/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[package]
name = "aku"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
axum = ["dep:aku_axum"]
cron = ["dep:aku_cron"]
postgres = ["dep:aku_postgres", "aku_serenity/postgres"]
serenity = ["dep:aku_serenity"]
runtime = []

[dependencies]
aku_core = { workspace = true }
aku_axum = { workspace = true, optional = true }
aku_cron = { workspace = true, optional = true }
aku_postgres = { workspace = true, optional = true }
aku_serenity = { workspace = true, optional = true }
futures.workspace = true

[workspace.dependencies]
aku_core.path = "core"
aku_axum.path = "modules/axum"
aku_cron.path = "modules/cron"
aku_postgres.path = "modules/postgres"
aku_serenity.path = "modules/serenity"

paste = "^1.0"
extend = "^1.2"
sqlx = { version = "^0.8", features = ["runtime-tokio", "postgres"] }
sea-query = "^0.32"
sea-query-binder = { version = "^0.7", features = ["sqlx-postgres"] }
tokio = "^1.48"
tokio-cron-scheduler = "^0.15"
futures = "^0.3"
serenity = "^0.12"
log = "^0.4"
