# Copyright 2025 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "aku_cron"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aku_core.workspace = true
tokio-cron-scheduler.workspace = true
futures.workspace = true