# Copyright 2025 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "aku_postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aku_core.workspace = true
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
